--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 </head>
 <body>
+    <img src="images/loader.gif" alt="Cargando..." style="text-align: center;">
 	<script type = "text/javascript">
     window.onload = game;
     </script>
