--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 </style>
 
 </head>
-<body>
-    <img src="images/loader.gif" alt="Cargando..." style="text-align: center;">
+<body 
+    style="
+        background-image: url('images/loader.gif');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;">
 	<script type = "text/javascript">
     window.onload = game;
     </script>
