--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title>Orbit</title>
 <link rel="icon" type="image/png" href="images/6.png"/>
 <link rel="stylesheet" type="text/css" href="game.css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+<script src="minLibs/jquery.min.js"></script>
 <script src='lib/quintus.js'></script>
 <!-- Añadir aquí el resto de módulos de Quintus -->
     <script src='lib/quintus_sprites.js'></script>
